==> captain58/embed_platform/platform/mcu/GD32F30x/hal/src/hal_flash.c <==
#define INNER_FLASH
#include "sys.h"
#include "hal.h"
#define FLS_ERR_OK      (uint8_t)0
#define FLS_ERR_VAR     (uint8_t)1
#define FLS_ERR_FT      (uint8_t)2
#define FLS_ERR_EXSIT   (uint8)0x10
#define FLS_ERR_READ    (uint8)0x20
#define FLS_ERR_WRITE   (uint8)0x40
#define FLASH_SIZE     0x040000         //128k
#define FLASH_PAGE     2048              //512
#define FLASH_PAGE_MASK     (FLASH_PAGE-1)              //512
#define FLASH_ADDR_BASE     0x08000000
#define FLASH_BYTE_SIZE 2
#define FLASH_PAGE_WRBYTE_MASK     (FLASH_PAGE-2)              //512
#define  LEN_FLS_SECTOR  FLASH_PAGE        //sector 长度
#define WRITE_PROTECTION_DISABLE
#define FMC_PAGES_PROTECTED (OB_WP_6 | OB_WP_7)

uint8_t Flash_Erase_Sector( uint32_t address )
{
	uint16_t i;
	uint8_t Result = 0;
	uint32_t *PFlash;
    fmc_flag_clear(FMC_FLAG_BANK0_END);
    fmc_flag_clear(FMC_FLAG_BANK0_WPERR);
    fmc_flag_clear(FMC_FLAG_BANK0_PGERR);
    address += FLASH_ADDR_BASE;
//	if(SectorNum < 32) return 2;//禁止擦除boot区
	PFlash = (uint32_t *)(uint32_t)(address);
//		if( OperateKey == FLASHOPKEY )
//		{
//	RCC_PERCLK_SetableEx(FLSEPCLK, ENABLE);	//Flash擦写控制器时钟使能，用完就关
//		}
//		FLASH_Erase_Sector( address );
//	RCC_PERCLK_SetableEx(FLSEPCLK, DISABLE);	//Flash擦写控制器时钟使能，用完就关
	fmc_page_erase(address);
	for( i=0;i<128;i++ )
	{
		if( PFlash[i] != 0xFFFFFFFF ) 
		{
			Result = 1;
			break;
		}
	}
	
	return Result;
}

uint8_t Flsah_Write_String( uint32_t prog_addr,uint8_t* prog_data, uint16_t Len )
{
	uint16_t i;
	uint8_t Result = 0;
	uint8_t *PFlash;
	uint8_t step = 2;
    fmc_flag_clear(FMC_FLAG_BANK0_END);
    fmc_flag_clear(FMC_FLAG_BANK0_WPERR);
    fmc_flag_clear(FMC_FLAG_BANK0_PGERR);
    fmc_state_enum sta = FMC_READY;
    prog_addr += FLASH_ADDR_BASE;
//		if( OperateKey == FLASHOPKEY )
//		{
//	RCC_PERCLK_SetableEx(FLSEPCLK, ENABLE);	//Flash擦写控制器时钟使能，用完就关
//		}
//		FLASH_Prog_ByteString( prog_addr, prog_data, Len);
//	RCC_PERCLK_SetableEx(FLSEPCLK, DISABLE);	//Flash擦写控制器时钟使能，用完就关
//		sta = fmc_halfword_program(Address, data);
    for (i = 0; i < Len; i += step)
    {
        __disable_irq();
//	        ret = HAL_FLASH_Program(TypeProgram,
//	                              address + i,
//	                              *(pData + (i / step)));
        sta = fmc_halfword_program(prog_addr + i, *(uint16_t *)(prog_data + i));
        __enable_irq();
        if (sta != FMC_READY)
        {
            break;
        }
    }


	PFlash = (uint8_t*)prog_addr;
	for( i=0;i<Len;i++ )
	{
		if( PFlash[i] != prog_data[i] ) 
		{
			Result = 1;
			break;
		}
	}	
	
	return Result;
}
