==> captain58/embed_platform/platform/mcu/stm32l431/hal/src/hal_flash.c <==
#define INNER_FLASH
#include "sys.h"
#include "hal.h"
#define FLS_ERR_OK      (uint8_t)0
#define FLS_ERR_VAR     (uint8_t)1
#define FLS_ERR_FT      (uint8_t)2
#define FLS_ERR_EXSIT   (uint8)0x10
#define FLS_ERR_READ    (uint8)0x20
#define FLS_ERR_WRITE   (uint8)0x40
#define FLASH_FULL_SIZE     0x040000         //128k
#define FLASH_PAGE     2048              //512
#define FLASH_PAGE_MASK     (FLASH_PAGE-1)              //512
#define FLASH_ADDR_BASE     0x08000000
#define FLASH_BYTE_SIZE 2
#define FLASH_PAGE_WRBYTE_MASK     (FLASH_PAGE-2)              //512
#define  LEN_FLS_SECTOR  FLASH_PAGE        //sector 长度
#define WRITE_PROTECTION_DISABLE
#define FMC_PAGES_PROTECTED (OB_WP_6 | OB_WP_7)

uint8_t Flash_Erase_Sector( uint32_t address )
{
	uint16_t i;
	uint8_t Result = 0;
    address += FLASH_ADDR_BASE;
    /* Unlock the Flash to enable the flash control register access *************/
    HAL_FLASH_Unlock();

    /* Erase the user Flash area
    (area defined by FLASH_USER_START_ADDR and FLASH_USER_END_ADDR) ***********/

    /* Clear OPTVERR bit set on virgin samples */
    __HAL_FLASH_CLEAR_FLAG(FLASH_FLAG_OPTVERR); 
    /* Get the 1st page to erase */
    FirstPage = GetPage(address);
    /* Get the number of pages to erase from 1st page */
    NbOfPages = GetPage(FLASH_ADDR_BASE+FLASH_FULL_SIZE-1) - FirstPage + 1;
    /* Get the bank */
    BankNumber = GetBank(address);
    /* Fill EraseInit structure*/
    EraseInitStruct.TypeErase   = FLASH_TYPEERASE_PAGES;
    EraseInitStruct.Banks       = BankNumber;
    EraseInitStruct.Page        = FirstPage;
    EraseInitStruct.NbPages     = NbOfPages;

    /* Note: If an erase operation in Flash memory also concerns data in the data or instruction cache,
     you have to make sure that these data are rewritten before they are accessed during code
     execution. If this cannot be done safely, it is recommended to flush the caches by setting the
     DCRST and ICRST bits in the FLASH_CR register. */
    Result = HAL_FLASHEx_Erase(&EraseInitStruct, &PAGEError);
 
    HAL_FLASH_Lock();
	return Result;
}

uint8_t Flsah_Write_String( uint32_t prog_addr,uint8_t* prog_data, uint16_t Len )
{
	uint16_t i;
	uint8_t Result = 0;
	uint8_t *PFlash;
	uint8_t step = 8;
    HAL_FLASH_Unlock();
    uint32_t address = prog_addr + FLASH_ADDR_BASE;
    int sta = 0;
    for (i = 0; i < Len; i += step)
    {
        __disable_irq();

        sta = HAL_FLASH_Program(FLASH_TYPEPROGRAM_DOUBLEWORD, address + i, *(uint64_t *)(prog_data + i));// != HAL_OK)
        __enable_irq();
        if (sta != HAL_OK)
        {
            break;
        }
    }


	PFlash = (uint8_t*)address;
	for( i=0;i<Len;i++ )
	{
		if( PFlash[i] != prog_data[i] ) 
		{
			Result = 1;
			break;
		}
	}	
	HAL_FLASH_Lock();
	return Result;
}
